# sinan-agentic

./: .gitignore  README.md  pyproject.toml
agents_core/: __init__.py
agents_core/core/: __init__.py  base_runner.py  tool_error_recovery.py  turn_budget.py  turn_budget_tool.py
agents_core/instructions/: builder.py
agents_core/instructions/shared/: __init__.py
agents_core/mcp/: __init__.py  context_protocol.py  server_builder.py  tool_adapter.py  yaml_schema.py
agents_core/registry/: __init__.py  agent_catalog.py  agent_registry.py  tool_catalog.py  tool_registry.py
agents_core/utils/: tool_helpers.py
documentation/project/: capabilities.md
documentation/project/brainstorm/: capability-epic-briefing.md
examples/: context_and_session.py  custom_capability.py  simple_chat_agent.py
sinan_agentic_core/: __init__.py  orchestrator.py
sinan_agentic_core/agents/: __init__.py
sinan_agentic_core/agents/orchestration/: __init__.py
sinan_agentic_core/core/: __init__.py  base_runner.py  errors.py  tool_error_recovery.py  turn_budget.py  turn_budget_tool.py
sinan_agentic_core/core/capabilities/: __init__.py  base.py
sinan_agentic_core/guardrails/: __init__.py
sinan_agentic_core/instructions/: __init__.py  builder.py
sinan_agentic_core/mcp/: __init__.py  server_builder.py
sinan_agentic_core/models/: __init__.py  context.py
sinan_agentic_core/models/outputs/: __init__.py
sinan_agentic_core/registry/: __init__.py  agent_catalog.py  agent_factory.py  guardrail_registry.py  tool_catalog.py  tool_registry.py
sinan_agentic_core/services/: __init__.py  chat.py  events.py  hooks.py
sinan_agentic_core/session/: __init__.py  agent_session.py  sqlite_store.py
sinan_agentic_core/tools/: __init__.py
sinan_agentic_core/utils/: __init__.py
tests/: conftest.py  test_agent_catalog.py  test_core.py  test_instruction_builder.py  test_models.py  test_orchestrator.py  test_registry.py  test_services.py  test_session.py  test_tool_catalog.py  test_tool_error_recovery.py  test_turn_budget.py  test_utils.py
tests/core/capabilities/: test_base.py
tests/test_mcp/: test_catalog_mcp.py  test_server_builder.py  test_tool_adapter.py  test_yaml_schema.py
